fix scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,12 @@ canvas {
     z-index: -1;
     left: 0;
 }
+body{
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+body::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
